Fix overlapping text in taskbox

--- a/src/App.css
+++ b/src/App.css
@@ -16,5 +16,5 @@
   align-items: center;
   font-family: 'Pacifico', cursive;
   font-size: 80px;
-  margin-top: 5%
+  margin-top: 5%;
 }
