--- a/src/components/TaskList.css
+++ b/src/components/TaskList.css
@@ -16,6 +16,7 @@
 }
 
 .taskBox {
+    flex-shrink: 0;
     cursor: pointer;
     font-size: 18px;
     display: flex;
